[JBTM-3462] Migrate the SRA demo package (io.narayana.sra.demo) over to the [quickstart repo|https://github.com/jbosstm/quickstart].